--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola git</h1>
+    <h1>hola git</h1> .
     <p>clase 12 codo a codo</p>
+    <p>otro parrafo</p>
 </body>
 </html>
